# vkCompViz

./: .gitmodules  CITATION.cff  CMakeLists.txt  INSTALL.md  LICENSE  README.md  docs.md  functions.cmake
.github/workflows/: doxygen.yml  linuxBuild.yaml  linuxBuild.yml  macOSBuild.yml  pages.yml
docs/: Doxyfile  index.html
docs/html/: annotated.html  classGpu_1_1Gpu-members.html  classGpu_1_1Gpu.html  classGpu_1_1Gpu_1_1BenchmarkReport-members.html  classGpu_1_1Gpu_1_1BenchmarkReport.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times-members.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times_1_1Download-members.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times_1_1Download.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times_1_1Upload-members.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times_1_1Upload.html  classGpu_1_1Gpu_1_1BenchmarkReport_1_1Times__coll__graph.dot  classGpu_1_1Gpu_1_1BenchmarkReport__coll__graph.dot  classGpu_1_1Gpu_1_1WorkGroupCount-members.html  classGpu_1_1Gpu_1_1WorkGroupCount.html  classGpu_1_1Gpu__inherit__graph.dot  classGpu_1_1Vulkan-members.html  classGpu_1_1Vulkan.html  classGpu_1_1Vulkan_1_1Pipelines_1_1Compute-members.html  classGpu_1_1Vulkan_1_1Pipelines_1_1Compute.html  classGpu_1_1Vulkan_1_1Pipelines_1_1Graphics-members.html  classGpu_1_1Vulkan_1_1Pipelines_1_1Graphics.html  classGpu_1_1Vulkan_1_1SwapChain_1_1Frame-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1Frame.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1Buffers-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1Buffers.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1CommandBuffers-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1CommandBuffers.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1Fences-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1Fences.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1QueryPools-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1QueryPools.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1Sempahores-members.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight_1_1Sempahores.html  classGpu_1_1Vulkan_1_1SwapChain_1_1InFlight__coll__graph.dot  classGpu_1_1Vulkan_1_1Times_1_1Memory-members.html  classGpu_1_1Vulkan_1_1Times_1_1Memory.html  classGpu_1_1Vulkan_1_1Times_1_1Memory_1_1Download-members.html  (+173 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+53 more)
examples/: copyResources.cmake
examples/3DViewer/: 3DViewer.cpp  CMakeLists.txt  README.md  objLoader.cpp  objLoader.cppm
examples/3DViewer/shaders/: 3DViewerCompute.slang  3DViewerFragment.slang  3DViewerVertex.slang  inputs.slang
examples/parallelReduction/: CMakeLists.txt  README.md  parallelReduction.cpp
examples/parallelReduction/scripts/: measure.sh
examples/parallelReduction/shaders/: inputs.slang  reduction.slang  reductionFinal.slang
examples/separableFilter/: CMakeLists.txt
examples/simpleBlending/: CMakeLists.txt  README.md  simpleBlending.cpp
examples/simpleBlending/data/: A.exr  B.exr
examples/simpleBlending/shaders/: blend.slang  blendFS.slang  inputs.slang
paper/: paper.bib  paper.md
scripts/: README.md  buildOnMacOS-26.sh  buildOnUbuntu-24_04.sh
vkCompViz/: CMakeLists.txt  dependencies.cmake
vkCompViz/include/: vkCompViz.cppm
vkCompViz/shaders/: fullScreenVS.slang  splitScreenFS.slang  textureDisplayFS.slang  vertexFragmentCommons.slang
vkCompViz/src/: common.cppm  ffmpeg.h  glfwKeyStrings.cppm  gpu.cppm  gpu.interface.cpp  gpu.interface.cppm  gpu.vulkan.cpp  gpu.vulkan.cppm  gpuVulkan.cpp  gpuVulkan.cppm  loader.cppm  loader.image.cpp  loader.image.cppm  loader.imageFfmpeg.cpp  loader.imageFfmpeg.cppm  loader.interface.cppm  loaderImageFfmpeg.cpp  loaderImageFfmpeg.cppm  parameterParser.cpp  parameterParser.cppm  shader.cppm  shader.interface.cppm  shader.slang.cpp  shader.slang.cppm  timer.cppm  vkCompViz.app.cpp  vkCompViz.app.cppm  window.cppm  window.glfw.cpp  window.glfw.cppm  window.interface.cppm  windowGlfw.cpp  windowGlfw.cppm
